typestate-macro/tests/duplicate_state_attr.stderr
error: Duplicate attribute.
 --> $DIR/duplicate_state_attr.rs:9:5
  |
9 |     #[state]
  |     ^^^^^^^^
