typestate-macro/tests/duplicate_state_attr.rs
use typestate::typestate;

#[typestate]
mod m {
    #[automata]
    struct S {}

    #[state]
    #[state]
    struct A {}
}

fn main() {}